--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -1,48 +1,33 @@
 <div class="col-md-5" style="background-image: url('/images/bg1.png');background-repeat: no-repeat;background-size: cover;overflow:hidden">
 
-    <div class="blocks">
-        <div style="position:absolute;display: flex;justify-content: flex-end;  align-items: flex-end;  bottom:20px;  border: solid 1px transparent; ">
-            <div class="block" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;text-align: center;
-    overflow: hidden;
-    position: fixed;
-    left: 0;
-    opacity: 1;
 
-    
-    ">
-                <div class="block__inner " style=" ">
-                    <div class="block-content" style="padding-right:0rem; position:fixed;
- bottom:10px;left:20%;">
+    <div style="position:fixed;bottom:10px;text-align-last: center;text-align: center;width: inherit;">
 
-                        <h1 class="block__title">
-                            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Hey, I'm Sivaraj,</span>
-                        </h1>
-                        <h1 class="block__title">
+        <h1 class="block__title">
+            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Hey, I'm Sivaraj,</span>
+        </h1>
+        <h1 class="block__title">
 
-                            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Software Developer</em> with fluency in <em>MEAN Stack, Hybrid Mobile Apps</em>  and begginer in <em> Machine Learning</em> working in <em>Bengaluru, India</em> </span>
-                        </h1>
-                        <div class="block__cta " style="overflow: visible;">
-                            <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">
+            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Software Developer</em> with fluency in <em>MEAN Stack, Hybrid Mobile Apps</em>  and begginer in <em> Machine Learning</em> working in <em>Bengaluru, India</em> </span>
+        </h1>
+        <div class="block__cta " style="overflow: visible;">
+            <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">
                                     <span>Get in touch</span>
                                 </a>
-                        </div>
-                        <div class="block__social">
-                            <a class="block__social__link" target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
+        </div>
+        <div class="block__social">
+            <a class="block__social__link" target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
                     <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
                     </a>
-                            <a class="block__social__link" target="_blank" href="http://github.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
+            <a class="block__social__link" target="_blank" href="http://github.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
                          <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
                     </a>
-                            <a class="block__social__link" target="_blank" href="http://codepen.io/rafaelderolez" style="visibility: inherit; opacity: 1;">
+            <a class="block__social__link" target="_blank" href="http://codepen.io/rafaelderolez" style="visibility: inherit; opacity: 1;">
                         <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
                     </a>
-                            <a class="block__social__link" target="_blank" href="https://linkedin.com/in/rafaelderolez" style="visibility: inherit; opacity: 1;">
+            <a class="block__social__link" target="_blank" href="https://linkedin.com/in/rafaelderolez" style="visibility: inherit; opacity: 1;">
                          <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
                     </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
