--- a/root/app/templates/portrait_old.html
+++ b/root/app/templates/portrait_old.html
@@ -1,32 +1,57 @@
-<div class="block block--left" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">
-                    <div class="block__inner">
-                        <div class="block-content">
-                            <h1 class="block__title">
-                                <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Hey, I'm Raf,</span>
-                            </h1>
-                            <h1 class="block__title">
-                                <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a Belgian <em>front-end developer</em> working in <em>London</em> at NEVERBLAND</span>
-                            </h1>
-                            <div class="block__cta" style="overflow: visible;">
-                                <a href="mailto:hi@rafaelderolez.be" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">
+<div class="col-md-5" style="background-image: url('/images/bg1.png');background-repeat: no-repeat;background-size: cover;overflow:hidden">
+
+    <div class="blocks">
+        <div style="position:absolute;display: flex;justify-content: flex-end;  align-items: flex-end;  bottom:20px;  border: solid 1px transparent; ">
+            <div class="block" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;text-align: center;
+    overflow: hidden;
+    position: fixed;
+    left: 0;
+    opacity: 1;
+
+    
+    ">
+                <div class="block__inner " style=" ">
+                    <div class="block-content" style="padding-right:0rem; position:fixed;
+ bottom:10px;left:20%;">
+
+                        <h1 class="block__title">
+                            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Hey, I'm Sivaraj,</span>
+                        </h1>
+                        <h1 class="block__title">
+
+                            <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Software Developer</em> with fluency in <em>MEAN Stack, Hybrid Mobile Apps</em>  and begginer in <em> Machine Learning</em> working in <em>Bengaluru, India</em> </span>
+                        </h1>
+                        <div class="block__cta " style="overflow: visible;">
+                            <a href="mailto:hi@sivarajng@gmail.com" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">
                                     <span>Get in touch</span>
                                 </a>
-                            </div>
-                            <div class="block__social">
-                                <a class="block__social__link" target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                                    <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/images/svg-defs.svg#twitter"></use></svg>
-                                </a>
-                                <a class="block__social__link" target="_blank" href="http://github.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                                    <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/images/svg-defs.svg#github"></use></svg>
-                                </a>
-                                <a class="block__social__link" target="_blank" href="http://codepen.io/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                                    <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/images/svg-defs.svg#codepen-codepen-logo"></use></svg>
-                                </a>
-                                <a class="block__social__link" target="_blank" href="https://linkedin.com/in/rafaelderolez" style="visibility: inherit; opacity: 1;">
-                                    <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/images/svg-defs.svg#linkedin"></use></svg>
-                                </a>
-                            </div>
+                        </div>
+                        <div class="block__social">
+                            <a class="block__social__link" target="_blank" href="http://twitter.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                    <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
+                            <a class="block__social__link" target="_blank" href="http://github.com/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                         <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
+                            <a class="block__social__link" target="_blank" href="http://codepen.io/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                        <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
+                            <a class="block__social__link" target="_blank" href="https://linkedin.com/in/rafaelderolez" style="visibility: inherit; opacity: 1;">
+                         <img src="http://toulouse.bciaerospace.com/images/icons/linkedin.png" height="20px" width="20px"/>
+                    </a>
                         </div>
                     </div>
-                    <div class="block__bgi" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;"></div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="vertical-center">
+    </div>
+
+
+
+
+
+
+</div>
